2005-01-31  Jonathan Pryor  <jonpryor@vt.edu>

	* data/config.in: Add libraries msvcrt and MonoPosixHelper for use by
	  Mono.Posix.dll.

2005-01-31 Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* configure.in: check for term.h and termios.h

2005-01-30  Zoltan Varga  <vargaz@freemail.hu>

	* runtime/Makefile.am (mcs-compileall): Disable this for the 2.0
	profile because of bug #71963.

2005-01-28  Zoltan Varga  <vargaz@freemail.hu>

	* runtime/Makefile.am (mcs-compileall): New test to compile all methods
	in our assemblies.

2005-01-25  Raja R Harinath  <rharinath@novell.com>

	* runtime/Makefile.am ($(tmpinst)/config): New test support file.
	Map 'MonoPosixHelper' to in-tree version.
	($(tmpinst)/bin/mono): Use it.
	(mcs-do-run-test-profiles): Use $(tmpinst)/bin/mono as the RUNTIME.

2005-01-20  Jonathan Pryor  <jonpryor@vt.edu>

	* runtime/Makefile.am (centum_nunit_tests): Add class/Mono.Posix and
	  class/System, both of which pass all their unit tests.

2005-01-20  Raja R Harinath  <rharinath@novell.com>

	* runtime/Makefile.am (centum_nunit_tests): New.  List of NUnit
	tests that are currently passing 100%.
	(test_select): Run those on 'make check'.

2005-01-20  Atsushi Enomoto  <atsushi@ximian.com>

	* Makefile.am : removed nsys4cygwin.zip which has been 404 for a while.

2005-01-19  Zoltan Varga  <vargaz@freemail.hu>

	* Makefile.am (DIST_SUBDIRS): Distribute ikvm-native.

2005-01-15  Zoltan Varga  <vargaz@freemail.hu>

	* scripts/Makefile.am (bin_SCRIPTS): Remove whitespace after \.

2005-01-13  Zoltan Varga  <vargaz@freemail.hu>

	* configure.in Makefile.am: Resurrect ikvm-jni.

	* ikvm-native: New directory which contains a copy of the 'native'
	module in IKVM cvs.

2005-01-05  Jonathan Pryor  <jonpryor@vt.edu>

	* configure.in: Add check for <checklist.h>.

2005-01-04  Jonathan Pryor  <jonpryor@vt.edu>

	* configure.in: Add check for vsnprintf.

2005-01-04  Raja R Harinath  <rharinath@novell.com>
