@@ -1,3 +1,8 @@
+2005-02-01  Raja R Harinath  <rharinath@novell.com>
+
+	* runtime/Makefile.am (mcs-compileall): Set MONO_PATH.  Remove
+	reference to #71963, since it's fixed, and it's breaking elsewhere.
+
 2005-01-31  Jonathan Pryor  <jonpryor@vt.edu>
 
 	* data/config.in: Add libraries msvcrt and MonoPosixHelper for use by
